langtools/test/tools/javac/annotations/typeAnnotations/failures/common/receiver/StaticThings.out
StaticThings.java:33:26: compiler.err.non-static.cant.be.ref: kindname.variable, this
StaticThings.java:36:28: compiler.err.non-static.cant.be.ref: kindname.variable, this
StaticThings.java:52:32: compiler.err.non-static.cant.be.ref: kindname.variable, this
StaticThings.java:54:37: compiler.err.non-static.cant.be.ref: kindname.variable, this
4 errors
